--- a/module-tweet/pom.xml
+++ b/module-tweet/pom.xml
@@ -86,6 +86,10 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
         <!-- 类型转换 -->
         <dependency>
             <groupId>org.mapstruct</groupId>
